# godot-rust-voxel

./: .gitignore  README.md  rename_textures.zsh
godot/: HelloWorld.gdextension  HelloWorld.gdextension.uid  icon.svg.import  main.tscn  project.godot
godot/Scripts/: CameraController.gd  CameraController.gd.uid  TerrainGenerator.gd  TerrainGenerator.gd.uid  VoxelSceneInit.gd  VoxelSceneInit.gd.uid  VoxelWorld.gd  VoxelWorld.gd.uid
godot/addons/sky_3d/shaders/: AtmFog.gdshader.uid  CloudsCumulus.gdshader.uid  PerVertexSky.gdshader.uid  SimpleMoon.gdshader.uid  Sky.gdshader.uid
godot/addons/sky_3d/src/: DateTimeUtil.gd.uid  OrbitalElements.gd.uid  Plugin.gd.uid  ScatterLib.gd.uid  Sky3D.gd.uid  Skydome.gd.uid  TOD_Math.gd.uid  TimeOfDay.gd.uid
godot/shaders/: voxel.gdshader  voxel.gdshader.uid  wireframe.gdshader.uid
godot/textures/: atlas_color.png.import  atlas_normalmap.png.import  texture_array.png.import
rust/: Cargo.toml
rust/src/: lib.rs  mesh.rs  terrain.rs  voxel.rs
