[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
block-mesh = "0.2.0"
crossbeam = "0.8.4"
dashmap = { version = "6.1.0", features = ["rayon"] }
glam = "0.30.3"
godot = "0.3.0"
log = "0.4.27"
mikktspace = "0.3.0"
noise = "0.9.0"
once_cell = "1.21.3"
rayon = "1.10.0"
